--- a/app/styles/global-large.css
+++ b/app/styles/global-large.css
@@ -1,4 +1,4 @@
-/* h1 {
+h1 {
   font-size: 3.75rem;
   line-height: 1;
 }
@@ -21,4 +21,4 @@ h4 {
 h5 {
   font-size: 1.125rem;
   line-height: 1.75rem;
-} */
+}
